--- a/js/app/i18n/locales/cs.json
+++ b/js/app/i18n/locales/cs.json
@@ -262,15 +262,15 @@
         "ADMIN_DASHBOARD_SHOW_RECURRENCE_RULES": "Zobrazit pravidla opakování",
         "PAYMENT_FORM_NOT_SUPPORTED": "Karty Ticket Restaurant (zatím!) Nepřijímáme, použijte prosím klasickou kreditní kartu.",
         "PRICE_RANGE_EDITOR": {
-            "TYPE_RANGE": "Cena podle rozsahů",
-            "TYPE_FIXED": "Pevná cena",
+            "TYPE_RANGE": "Cena včetně DPH podle rozsahů",
+            "TYPE_FIXED": "Pevná cena včetně DPH",
+            "TYPE_PER_PACKAGE": "Cena včetně DPH za jedno balení",
             "ABOVE": "nad",
             "FOR_EVERY": "pro každý",
             "PER_PACKAGE_DEL_DISCOUNT": "Odstranit slevu",
             "PER_PACKAGE_ADD_DISCOUNT": "Přidat slevu",
             "PER_PACKAGE_STARTING": "počínaje od",
             "PER_PACKAGE": "za balení",
-            "TYPE_PER_PACKAGE": "Cena za jedno balení"
         },
         "ADMIN_DASHBOARD_DELETE_GROUP_CONFIRM": "Opravdu chcete odstranit všechny úkoly v této skupině?",
         "CASH_ON_DELIVERY_DISCLAIMER": "Budete platit na dobírku. Připravte si prosím přesnou částku a ujistěte se, že jste dosažitelní.",
