--- a/translations/messages.an.yml
+++ b/translations/messages.an.yml
@@ -724,7 +724,7 @@ form.deposit_refund_settings.deposit_refund_optin.help: 'Quan o sistema de depos
 form.new_order.variant_name.label: 'Nombre d''o producto'
 form.new_order.variant_name.help: 'Lo nombre que amaneixerá en o resumen d''o pediu
   y la factura'
-form.new_order.variant_price.label: 'Pre'
+form.new_order.variant_price.label: 'Pre con IVA inclusa'
 form.customize.about_us_enabled.label: 'Habilitar la pachina «about us»'
 form.customize.about_us.label: 'Conteniu d''a pachina «about us»'
 form.customize.motto.label: 'Lema'
