--- a/translations/messages.ca.yml
+++ b/translations/messages.ca.yml
@@ -727,7 +727,7 @@ form.deposit_refund_settings.deposit_refund_optin.label: El sistema de reemborsa
 form.new_order.variant_name.label: Nom del producte
 form.new_order.variant_name.help: El nom que apareixerà en el resum de la comanda
   i la factura
-form.new_order.variant_price.label: Preu
+form.new_order.variant_price.label: Preu amb IVA inclòs
 restaurant.quotes_disclaimer.authenticated: Aquest restaurant també accepta comandes
   amb pressupost. Per fer un pressupost, ha de ser un client referenciat.<a href="%contact_us%">Contacta
   amb nosaltres </a>per a més informació.
