--- a/translations/messages.es.yml
+++ b/translations/messages.es.yml
@@ -1436,6 +1436,8 @@ registration.step.invitation.link.copied: "Copiado"
 deliveries.imports: Ficheros importados
 deliveries.importing: El fichero %filename% va a ser importado.
 deliveries.imports.created_at: Creado el
+deliveries.imports.see_file: Ver archivo
+deliveries.imports.see_errored_file: Detalles de los errores
 business.account.settings.link: Asociar a mi cuenta
 form.business_restaurant_group.restaurants_with_menu: Restaurantes con menú
 form.business_restaurant_group.restaurant: Restaurante
