--- a/translations/messages.fr.yml
+++ b/translations/messages.fr.yml
@@ -1446,6 +1446,8 @@ error.return_to_homepage: Retourner à la page d'accueil
 deliveries.imports: Fichiers importés
 deliveries.importing: Le fichier %filename% va bientôt être importé.
 deliveries.imports.created_at: Créé le
+deliveries.imports.see_file: Voir le fichier
+deliveries.imports.see_errored_file: Voir les erreurs
 adminDashboard.business_restaurant_groups.title: Groupes de restaurants d'entreprise
 registration.flow.finish: "Terminer mon inscription"
 form.settings.company_legal_name.label: "Nom légal de l'entreprise"
