--- a/translations/messages.es.yml
+++ b/translations/messages.es.yml
@@ -334,6 +334,7 @@ form.address.addressLocality.label: Ciudad
 form.address.postalCode.label: Código postal
 form.address.description.label: Instrucciones para la entrega
 form.address.description.placeholder: 2ª puerta a la izquierda…
+pricing_rule_set.new: Nueva tarifa
 form.pricing_rule_set.name.label: Nombre
 form.pricing_rule_set.rules.label: Reglas
 form.pricing_rule.price.label: Precio
