--- a/js/app/i18n/locales/it.json
+++ b/js/app/i18n/locales/it.json
@@ -362,6 +362,9 @@
         "ADMIN_DASHBOARD_CREATE_GROUP": "Crea gruppo",
         "ADMIN_DASHBOARD_GROUP_NAME_LABEL": "Nome del gruppo",
         "RULE_PICKER_LINE_VOLUME_UNITS": "Unità di volume",
-        "GENERIC_BARCODE_HELP": "Questo codice a barre dell'attività può tracciare tutti i pacchi collegati come un'unica unità. Utilizzalo per semplificare il monitoraggio dell'intera consegna. Per un monitoraggio dettagliato pacco per pacco, utilizza invece i codici a barre dei singoli pacchi."
+        "GENERIC_BARCODE_HELP": "Questo codice a barre dell'attività può tracciare tutti i pacchi collegati come un'unica unità. Utilizzalo per semplificare il monitoraggio dell'intera consegna. Per un monitoraggio dettagliato pacco per pacco, utilizza invece i codici a barre dei singoli pacchi.",
+    "MODAL_PREREQUISITE_TASK_REQUIRED": "Attività preliminare richiesta",
+    "MODAL_PREREQUISITE_TASK_REQUIRED_DESC": "Un'attività precedente deve essere completata",
+    "MODAL_PREREQUISITE_TASK_REQUIRED_MESSAGE": "L'attività #{{task}} deve essere completata prima di procedere. Vuoi completarla ora?"
     }
 }
