add possibility to override timeslots

--- a/js/app/i18n/locales/fr.json
+++ b/js/app/i18n/locales/fr.json
@@ -603,7 +603,9 @@
         "GROUP_ORDER_START": "Commencer une commande groupée",
         "GROUP_ORDER_SHARE_LINK": "Partagez le lien avec d'autres pour participer à votre commande. Une fois qu'ils ont terminé, vous pouvez passer la commande.",
         "GENERIC_BARCODE_HELP": "Ce code-barres de tâche peut suivre tous les colis liés comme une seule unité. Utilisez-le pour simplifier le suivi de l'ensemble de la livraison. Pour un suivi détaillé colis par colis, utilisez plutôt les codes-barres individuels des colis.",
-        "SWITCH_COMPLEX_DATEPICKER": "Sélectionner une date sur plusieurs jours"
+        "SWITCH_COMPLEX_DATEPICKER": "Sélectionner une date sur plusieurs jours",
+        "SWITCH_TIMESLOTPICKER": "Sélectionner une tranche horaire personnalisée",
+        "SWITCH_DATEPICKER": "Revenir aux tranches horaires prédéfinies"
 
     }
 }
