--- a/js/app/i18n/locales/es.json
+++ b/js/app/i18n/locales/es.json
@@ -441,6 +441,8 @@
         "CART_TIME_RANGE_CHANGED_MODAL_CHOOSE_TIME_RANGE_TEXT": "Por favor, elige otro intervalo de tiempo",
         "CART_TIME_RANGE_CHANGED_MODAL_SELECT_TIME_RANGE_ACTION": "Cambiar hora de entrega",
         "GENERIC_BARCODE_HELP": "Este código de barras de tarea puede rastrear todos los paquetes vinculados como una sola unidad. Úselo para simplificar el seguimiento de toda la entrega. Para un seguimiento detallado paquete por paquete, utilice los códigos de barras individuales de los paquetes.",
-        "SWITCH_COMPLEX_DATEPICKER": "Seleccionar una fecha en varios días"
+        "SWITCH_COMPLEX_DATEPICKER": "Seleccionar una fecha en varios días",
+        "SWITCH_TIMESLOTPICKER": "Seleccionar un intervalo de tiempo personalizado",
+        "SWITCH_DATEPICKER": "Volver a los intervalos de tiempo predefinidos"
     }
 }
