--- a/js/app/i18n/locales/fr.json
+++ b/js/app/i18n/locales/fr.json
@@ -605,7 +605,8 @@
         "GENERIC_BARCODE_HELP": "Ce code-barres de tâche peut suivre tous les colis liés comme une seule unité. Utilisez-le pour simplifier le suivi de l'ensemble de la livraison. Pour un suivi détaillé colis par colis, utilisez plutôt les codes-barres individuels des colis.",
         "SWITCH_COMPLEX_DATEPICKER": "Sélectionner une date sur plusieurs jours",
         "SWITCH_TIMESLOTPICKER": "Sélectionner une tranche horaire personnalisée",
-        "SWITCH_DATEPICKER": "Revenir aux tranches horaires prédéfinies"
+        "SWITCH_DATEPICKER": "Revenir aux tranches horaires prédéfinies", 
+        "DEFAULT_TIMESLOT": "Tranche horaire par défaut"
 
     }
 }
