--- a/translations/validators.en.yml
+++ b/translations/validators.en.yml
@@ -74,3 +74,5 @@ spreadsheet.csv_encoding: CSV files must be encoded in UTF-8
 
 siret.invalid: Invalid SIRET number
 siret.head_office: You must provide an establishment SIRET number, not head office.
+
+form.package_set.duplicatePackageNames: Package names must be unique in a package set
