WIP: invoicing page

--- a/js/app/i18n/locales/en.json
+++ b/js/app/i18n/locales/en.json
@@ -195,6 +195,13 @@
         "ADMIN_WAREHOUSE_FORM_TITLE": "Create a warehouse",
         "ADMIN_WAREHOUSE_NAME_LABEL": "Name",
         "ADMIN_WAREHOUSE_ADDRESS_LABEL": "Adresse",
+        "ADMIN_ORDERS_TO_INVOICE_TITLE": "Orders to invoice",
+        "ADMIN_ORDERS_TO_INVOICE_ORDER_NUMBER_LABEL": "Order #",
+        "ADMIN_ORDERS_TO_INVOICE_DATE_LABEL": "Date",
+        "ADMIN_ORDERS_TO_INVOICE_DESCRIPTION_LABEL": "Description",
+        "ADMIN_ORDERS_TO_INVOICE_SUB_TOTAL_LABEL": "Subtotal (excl. VAT)",
+        "ADMIN_ORDERS_TO_INVOICE_TAXES_LABEL": "Taxes",
+        "ADMIN_ORDERS_TO_INVOICE_TOTAL_LABEL": "Total (incl. VAT)",
         "ADMIN_VEHICLE_FORM_TITLE": "Create vehicle",
         "ADMIN_VEHICLE_UPDATE_FORM_TITLE": "Update vehicle",
         "ADMIN_VEHICLE_UPDATE_TRAILER_FORM_TITLE": "Update trailer",
