create switch so overide timeslots

--- a/js/app/i18n/locales/de.json
+++ b/js/app/i18n/locales/de.json
@@ -172,6 +172,8 @@
         "CART_TIME_RANGE_CHANGED_MODAL_MESSAGE": "Die Öffnungszeiten erlauben es nicht, die Bestellung heute aufzugeben",
         "CART_TIME_RANGE_CHANGED_MODAL_CHOOSE_TIME_RANGE_TEXT": "Bitte wählen Sie einen anderen Zeitraum",
         "CART_TIME_RANGE_CHANGED_MODAL_SELECT_TIME_RANGE_ACTION": "Lieferzeit ändern",
-        "GENERIC_BARCODE_HELP": "Dieser Aufgaben-Barcode kann alle verknüpften Pakete als eine Einheit verfolgen. Verwenden Sie ihn für eine vereinfachte Verfolgung der gesamten Lieferung. Für eine detaillierte Verfolgung der einzelnen Pakete verwenden Sie stattdessen die individuellen Paket-Barcodes."
+        "GENERIC_BARCODE_HELP": "Dieser Aufgaben-Barcode kann alle verknüpften Pakete als eine Einheit verfolgen. Verwenden Sie ihn für eine vereinfachte Verfolgung der gesamten Lieferung. Für eine detaillierte Verfolgung der einzelnen Pakete verwenden Sie stattdessen die individuellen Paket-Barcodes.",
+        "SWITCH_COMPLEX_DATEPICKER": "Wählen Sie ein Datum über mehrere Tage"
     }
+
 }
