--- a/js/app/i18n/locales/en.json
+++ b/js/app/i18n/locales/en.json
@@ -199,6 +199,7 @@
         "ADMIN_ORDERS_TO_INVOICE_FILTER_RANGE": "Period",
         "ADMIN_ORDERS_TO_INVOICE_FILTER_STORE": "Store ID",
         "ADMIN_ORDERS_TO_INVOICE_REFRESH": "Refresh",
+        "ADMIN_ORDERS_TO_INVOICE_DOWNLOAD": "Download",
         "ADMIN_ORDERS_TO_INVOICE_ORDER_NUMBER_LABEL": "Order #",
         "ADMIN_ORDERS_TO_INVOICE_DATE_LABEL": "Date",
         "ADMIN_ORDERS_TO_INVOICE_DESCRIPTION_LABEL": "Description",
