added: UI to export file for odoo

--- a/js/app/i18n/locales/en.json
+++ b/js/app/i18n/locales/en.json
@@ -206,6 +206,8 @@
         "ADMIN_ORDERS_TO_INVOICE_SUB_TOTAL_LABEL": "Subtotal (excl. VAT)",
         "ADMIN_ORDERS_TO_INVOICE_TAXES_LABEL": "Taxes",
         "ADMIN_ORDERS_TO_INVOICE_TOTAL_LABEL": "Total (incl. VAT)",
+        "ADMIN_ORDERS_TO_INVOICE_DESTINATION_STANDARD": "Standard",
+        "ADMIN_ORDERS_TO_INVOICE_DESTINATION_ODOO": "Odoo",
         "ADMIN_VEHICLE_FORM_TITLE": "Create vehicle",
         "ADMIN_VEHICLE_UPDATE_FORM_TITLE": "Update vehicle",
         "ADMIN_VEHICLE_UPDATE_TRAILER_FORM_TITLE": "Update trailer",
