--- a/js/app/i18n/locales/en.json
+++ b/js/app/i18n/locales/en.json
@@ -195,9 +195,10 @@
         "ADMIN_WAREHOUSE_FORM_TITLE": "Create a warehouse",
         "ADMIN_WAREHOUSE_NAME_LABEL": "Name",
         "ADMIN_WAREHOUSE_ADDRESS_LABEL": "Adresse",
+        "ADMIN_INVOICING_TITLE": "Invoicing [PREVIEW]",
         "ADMIN_ORDERS_TO_INVOICE_TITLE": "Orders to invoice",
         "ADMIN_ORDERS_TO_INVOICE_FILTER_RANGE": "Period",
-        "ADMIN_ORDERS_TO_INVOICE_FILTER_STORE": "Store ID",
+        "ADMIN_ORDERS_TO_INVOICE_FILTER_STORE": "Store ID (Preview only)",
         "ADMIN_ORDERS_TO_INVOICE_REFRESH": "Refresh",
         "ADMIN_ORDERS_TO_INVOICE_DOWNLOAD": "Download",
         "ADMIN_ORDERS_TO_INVOICE_ORDER_NUMBER_LABEL": "Order #",
@@ -206,8 +207,9 @@
         "ADMIN_ORDERS_TO_INVOICE_SUB_TOTAL_LABEL": "Subtotal (excl. VAT)",
         "ADMIN_ORDERS_TO_INVOICE_TAXES_LABEL": "Taxes",
         "ADMIN_ORDERS_TO_INVOICE_TOTAL_LABEL": "Total (incl. VAT)",
-        "ADMIN_ORDERS_TO_INVOICE_DESTINATION_STANDARD": "Standard",
-        "ADMIN_ORDERS_TO_INVOICE_DESTINATION_ODOO": "Odoo",
+        "ADMIN_ORDERS_TO_INVOICE_FILE_FORMAT": "File format",
+        "ADMIN_ORDERS_TO_INVOICE_DESTINATION_STANDARD": "Standard (CSV)",
+        "ADMIN_ORDERS_TO_INVOICE_DESTINATION_ODOO": "Odoo (CSV)",
         "ADMIN_VEHICLE_FORM_TITLE": "Create vehicle",
         "ADMIN_VEHICLE_UPDATE_FORM_TITLE": "Update vehicle",
         "ADMIN_VEHICLE_UPDATE_TRAILER_FORM_TITLE": "Update trailer",
