added: allow creation of an incident from an order page

--- a/translations/messages.en.yml
+++ b/translations/messages.en.yml
@@ -928,6 +928,7 @@ embed.delivery.confirm_message: Your delivery order has been placed and you will
 pagination.previous: Previous
 pagination.next: Next
 basics.view: View
+basics.more: More
 basics.save: Save
 basics.next: Next
 basics.continue: Continue
