--- a/js/app/i18n/locales/en.json
+++ b/js/app/i18n/locales/en.json
@@ -533,6 +533,7 @@
         "REPORTED_BY": "Reported by",
         "ACTION": "Action",
         "VIEW_INCIDENT": "View incident",
+        "NEW_INCIDENT": "New incident",
         "REPORT": "Report",
         "ADMIN_DASHBOARD_REPORT_INCIDENT": "Report an incident",
         "SHOW_CLOSED_INCIDENTS": "Show closed incidents",
